fix collection